--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"cub3d.h": "c",
 		"stdio.h": "c",
-		"cstdlib": "c"
+		"cstdlib": "c",
+		"stdbool.h": "c",
+		"libft.h": "c"
 	}
 }
