separated keyboard and mouse hooks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
 		"cstdlib": "c",
 		"stdbool.h": "c",
 		"libft.h": "c",
-		"stdlib.h": "c"
+		"stdlib.h": "c",
+		"x.h": "c",
+		"keysym.h": "c"
 	}
 }
