--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,10 @@
 		"array": "c",
 		"math.h": "c",
 		"time.h": "c",
-		"unistd.h": "c"
+		"unistd.h": "c",
+		"initializer_list": "c",
+		"ranges": "c",
+		"span": "c",
+		"utility": "c"
 	}
 }
