--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,8 @@
 		"sdl_mixer.h": "c",
 		"errors.h": "c",
 		"sound.h": "c",
-		"system_error": "c"
+		"system_error": "c",
+		"colors.h": "c",
+		"sdl.h": "c"
 	}
 }
