--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/cub3D",
-            "args":  ["${workspaceFolder}/maps/good/creepy.cub"],
+            "program": "${workspaceFolder}/cub3D_bonus",
+            "args":  ["${workspaceFolder}/maps/good/bonus.cub"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
